// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostTemplate renders correctly 1`] = `
<div
  className="layout"
>
  <Helmet>
    <html
      lang="en"
    />
    <title>
      test - Test title
    </title>
    <meta
      content="test"
      name="description"
    />
    <meta
      content="test - Test title"
      property="og:site_name"
    />
    <meta
      content="summary"
      name="twitter:card"
    />
    <meta
      content="test - Test title"
      name="twitter:title"
    />
  </Helmet>
  <div
    className="post"
  >
    <Helmet>
      <link
        href="http://localhost/posts/test-123"
        rel="canonical"
      />
    </Helmet>
    <a
      className="post__home-button"
      href="/"
    >
      All Articles
    </a>
    <div
      className="post__content"
    >
      <div
        className="content"
      >
        <h1
          className="content__title"
        >
          test
        </h1>
        <div
          className="content__body"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>test</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="post__footer"
    >
      <div
        className="meta"
      >
        <p
          className="meta__date"
        >
          Published 
          1 Sep 2016
        </p>
      </div>
      <div
        className="tags"
      >
        <ul
          className="tags__list"
        >
          <li
            className="tags__list-item"
          >
            <a
              className="tags__list-item-link"
              href="/test_0"
            >
              test_0
            </a>
          </li>
          <li
            className="tags__list-item"
          >
            <a
              className="tags__list-item-link"
              href="/test_1"
            >
              test_1
            </a>
          </li>
        </ul>
      </div>
      <div
        className="author"
      >
        <p
          className="author__bio"
        >
          Test bio
          <a
            className="author__bio-twitter"
            href="https://www.twitter.com/#"
            rel="noopener noreferrer"
            target="_blank"
          >
            <strong>
              Test name
            </strong>
             on Twitter
          </a>
        </p>
      </div>
    </div>
    <div
      className="post__comments"
    />
  </div>
</div>
`;

exports[`PostTemplate renders correctly with canonical 1`] = `
<div
  className="layout"
>
  <Helmet>
    <html
      lang="en"
    />
    <title>
      test - Test title
    </title>
    <meta
      content="test"
      name="description"
    />
    <meta
      content="test - Test title"
      property="og:site_name"
    />
    <meta
      content="summary"
      name="twitter:card"
    />
    <meta
      content="test - Test title"
      name="twitter:title"
    />
  </Helmet>
  <div
    className="post"
  >
    <Helmet>
      <link
        href="https://www.medium/@user/original-post"
        rel="canonical"
      />
    </Helmet>
    <a
      className="post__home-button"
      href="/"
    >
      All Articles
    </a>
    <div
      className="post__content"
    >
      <div
        className="content"
      >
        <h1
          className="content__title"
        >
          test
        </h1>
        <div
          className="content__body"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<p>test</p>",
            }
          }
        />
      </div>
    </div>
    <div
      className="post__footer"
    >
      <div
        className="meta"
      >
        <p
          className="meta__date"
        >
          Published 
          1 Sep 2016
        </p>
      </div>
      <div
        className="tags"
      >
        <ul
          className="tags__list"
        >
          <li
            className="tags__list-item"
          >
            <a
              className="tags__list-item-link"
              href="/test_0"
            >
              test_0
            </a>
          </li>
          <li
            className="tags__list-item"
          >
            <a
              className="tags__list-item-link"
              href="/test_1"
            >
              test_1
            </a>
          </li>
        </ul>
      </div>
      <div
        className="author"
      >
        <p
          className="author__bio"
        >
          Test bio
          <a
            className="author__bio-twitter"
            href="https://www.twitter.com/#"
            rel="noopener noreferrer"
            target="_blank"
          >
            <strong>
              Test name
            </strong>
             on Twitter
          </a>
        </p>
      </div>
    </div>
    <div
      className="post__comments"
    />
  </div>
</div>
`;
